Fix unit test.